<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sirfootball.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_draft"
        android:name="com.sirfootball.android.ui.draft.DraftFragment"
        android:label="@string/title_draft"
        tools:layout="@layout/fragment_draft" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.sirfootball.android.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_questions"
        android:name="com.sirfootball.android.ui.questions.QuestionsFragment"
        android:label="@string/title_questions"
        tools:layout="@layout/fragment_questions" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.sirfootball.android.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>