<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_draft"
        android:icon="@drawable/ic_swap_calls_black_24dp"
        android:title="@string/title_draft" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_questions"
        android:icon="@drawable/ic_help_center_black_24dp"
        android:title="@string/title_questions" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>

<!--
               SFLockerRoomView(path: $path)
                    .tabItem {
                        Label("Locker Room", systemImage: "door.left.hand.open")
                    }.environmentObject(appUser)
                SFDraftView()
                    .tabItem {
                        Label("Draft", systemImage: "arrow.triangle.swap")
                    }.environmentObject(appUser)
                SFAddView()
                    .tabItem {
                        Label("Add", systemImage: "plus.app")
                    }.environmentObject(appUser)
                SFFaqView()
                    .tabItem {
                        Label("Questions", systemImage: "person.fill.questionmark")
                    }.environmentObject(appUser)
                SFSettingsView()
                    .tabItem {
                        Label("Settings", systemImage: "gearshape.fill")
                    }.environmentObject(appUser)

-->